--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.5",
     "uuid": "^8.3.1",
     "uuidv1": "^1.6.14"
